# hcal_optimizer

./: .gitignore  CMakeLists.txt  README.md  activate_spack.sh  bayesian_optimization.py  build.sh  clean_all.py  conductor.py  notes.md  orchestrator.py  setup.sh
analysis/: lateral_leakage.C  processor.cc  result_validation.C
analysis/geometry/: analyze_and_compare.py  plot_observed_interaction_depth.C  run_interaction_depth.py  start_layer_observed.C
analysis/result_validation/: efficiency_vs_threshold.py  scan_muon_threshold.py
analysis/simulation/: layer_energy_spectrum.C  performance.C  plot_landau.C  start_layer_hist.C  visible_energy_overlay.C
csv_data/: best_geometry_configuration.csv  control.csv  info.md  results_compact.csv  results_raw.csv
data/calib/: calibration.json
data/result_validation/: 04e3fdfb_threshold_scan.csv  1144444a_threshold_scan.csv
docs/latex/: analysis_code.tex  analysis_note.tex  h-physrev3.bst  introduction.tex  reference.bib  report.tex  summary.tex  title.tex
docs/plots/: efficiency_hist.C  efficiency_vs_kinetic_energy.C  mip_landau.C  plots_epic.C  sorted_eff.C  threshold_scan.C
geometries/: extend_lhs.py  generate_hcal.py  generate_lhs.py  geometry_utils.py  sweep_geometries.py
geometries/definitions/: constants.xml
geometries/src/: hcal.cpp
processing/: processor.cc
simulation/: calibrate_fpr.py  conductor.py
surrogate/: aggregator.py  average_training_csv.py  build_raw_csv.py  compact_training_csv.py  k_fold_validation.py  predict_performance.py  propose_bo.py  train_surrogate.py
visuals/: visualize.py
(+101 files in other folders)
